# src/routes/rentalRoute.js
@@ -1,8 +1,9 @@
 import express from 'express'
-import { rentVehicle } from '../controllers/rentalController.js'
+import { rentVehicle, vehicleRentByUser } from '../controllers/rentalController.js'
 
 const rentalRouter = express.Router()
 
 rentalRouter.post('/rentals',rentVehicle)
+rentalRouter.get('/vehiclerentbyuser',vehicleRentByUser)
 
 export default  rentalRouter
