# src/routes/userRoute.js
@@ -1,8 +1,9 @@
 import express from 'express'
-import { createUser, loginUser } from '../controllers/userController.js'
+import { createUser, detailsOfUser, loginUser } from '../controllers/userController.js'
 const userRouter = express.Router()
 
 userRouter.post('/users',createUser)
 userRouter.post('/loginuser',loginUser)
+userRouter.get('/userdetails',detailsOfUser)
 
 export default  userRouter
